[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/interactive_objects/barrel_DDL.png" type="Texture" id=1]
[ext_resource path="res://interactive_objects/barrel.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 4.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "rolling_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 8, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rolling_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
resource_name = "smash"
length = 0.4
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.5, 10 )

[node name="Barrel" type="KinematicBody2D" groups=["barrel"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimBarrel" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 3 )
anims/rolling_left = SubResource( 6 )
anims/rolling_right = SubResource( 4 )
anims/smash = SubResource( 7 )

[node name="AreaDamage" type="Area2D" parent="."]

[node name="DamageCollision" type="CollisionShape2D" parent="AreaDamage"]
position = Vector2( 0.5, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AreaDamage" to="." method="_on_AreaDamage_body_entered"]
